<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020, Zaphod Consulting BV, Christine Karman
  ~ This project is free software: you can redistribute it and/or modify it under the terms of
  ~ the Apache License, Version 2.0. You can find a copy of the license at
  ~ http://www.apache.org/licenses/LICENSE-2.0.
  -->

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".tweet.TwitFragment"
        android:padding="@dimen/page_padding">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listview"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:alpha="1.0"
            android:visibility="invisible"
            android:id="@+id/tweet">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                style="@style/tweet_edit"
                android:background="@color/tweet_background"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/tweet"
                    style="@style/text_length"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:importantForAutofill="no"
                    android:id="@+id/status_tweet_text"
                    style="@style/text"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_length"
                    style="@style/text_length"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textAllCaps="false"
                    android:id="@+id/submit_tweet"
                    style="@style/button"
                    android:text="@string/submit"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:alpha="1.0"
            android:visibility="invisible"
            android:id="@+id/reply">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                style="@style/tweet_edit"
                android:background="@color/tweet_background"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/reply"
                    style="@style/text_length"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:gravity="top"
                    android:id="@+id/reply_text"
                    style="@style/text"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reply_text_length"
                    style="@style/text_length"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textAllCaps="false"
                    android:id="@+id/submit_reply"
                    style="@style/button"
                    android:text="@string/submit"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/tweet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@android:color/holo_purple"
            app:borderWidth="0dp"
            app:elevation="4dp"
            android:padding="0dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_create_black_24dp"
            android:contentDescription="@string/submit"/>

</FrameLayout>
